tests/typec-test/test_out/spec-with-funcs.txt
error: type 'uint' already has an implementation for 'Glue'
  --> spec-with-funcs\root.ctl:10:1
   |
...  |
12 | | }
   | |_^ this already satisfies both types
   |

error: function not found
  --> spec-with-funcs\root.ctl:25:7
   |
25 |     G\new().use_on(value)
   |       ^^^ this does not exist
   |
   = info: queried 'param0\new'

error: function not found
  --> spec-with-funcs\root.ctl:33:48
   |
33 | fn [B, T: GenericSpec[B]] take(t: T) -> B => T\take(t)
   |                                                ^^^^ this does not exist
   |
   = info: queried 'param1\take'

error: cannot infer type of parameters[0]
  --> spec-with-funcs\root.ctl:34:37
   |
34 | fn main -> uint => uint\new() + take(0)
   |                                     ^^^ while instantiating this call
   |

error: spec function return type mismatch
  --> spec-with-funcs\root.ctl:17:8
   |
17 |     fn new -> uint => 0
   |        ^^^^^^^^^^^ this function returns different type
   |
   = info: expected '0\A' but found 'uint'

error: type mismatch
  --> spec-with-funcs\root.ctl:18:54
   |
18 |     fn [T] use_on(s: ^uint) -> Glued[T] => \{ inner: value }
   |                                                      ^^^^^ mismatch occurred here
   |
   = info: expected 'param0' but got '^uint'

error: missing constructor fields
  --> spec-with-funcs\root.ctl:18:44
   |
18 |     fn [T] use_on(s: ^uint) -> Glued[T] => \{ inner: value }
   |                                            ^^^^^^^^^^^^^^^^^ this constructor does not initialize all required fields
   |
   = help: fields that are missing: inner
   = info: all fields must be initialized

error: missing spec functions
  --> spec-with-funcs\root.ctl:17:1
   |
...  |
19 | | }
   | |_^ this impl block does not implement all required functions
   |
   = help: functions that are missing: use_on

info: tir repr of functions:
 fn [] new() -> uint return 0

fn [] use_on(var0: ^uint, var1: param0) -> 0\Glued[param0] return 0\Glued[param0]\{var1}

fn [] new() -> uint return 0

fn [] new() -> () return {
}

fn [] take(var0: uint) -> uint return var0



